# lib/api-spec/openapi.yaml
@@ -277,8 +277,10 @@ components:
         $ref: "#/components/schemas/PlanCategory"
     Review:
       type: object
-      required: [name, text, rating]
+      required: [id, name, text, rating, createdAt]
       properties:
+        id:
+          type: number
         name:
           type: string
         company:
@@ -289,6 +291,9 @@ components:
           type: number
           minimum: 1
           maximum: 5
+        createdAt:
+          type: string
+          format: date-time
     ReviewsResponse:
       type: array
       items:
